add merchants and branches
