# backend/api/receipt.go
@@ -12,4 +12,5 @@ type Receipt struct {
 	Date          time.Time          `bson:"date" json:"date,omitempty"`
 	Description   string             `bson:"description" json:"description,omitempty"`
 	Entries       []ReceiptEntry     `bson:"entries" json:"entries,omitempty"`
+	MerchantId    string             `bson:"merchantId" json:"merchantId,omitempty"`
 }
